Cut video works without problem calling from frontend